--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -10,7 +10,38 @@
     tools:context="com.quiz.javi.quizapp.QuizActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/questionTextView"
+        android:text="Sup fool"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="86dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/buttonAnswer1"
+        android:elevation="0dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonAnswer2"
+        android:elevation="0dp"
+        android:layout_below="@+id/buttonAnswer1"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="19dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonAnswer3"
+        android:elevation="0dp"
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/buttonAnswer2"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
