Created View interface and Presenter class to handle for Quiz Activity class. Added unit tests for Presenter class. Changed gradle back to minsdk to 15, to support a wider variety of devices, and added Mockito dependency for unit testing.

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -14,9 +14,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/questionTextView"
         android:text="Sup fool"
-        android:textAlignment="center"
+        android:gravity="center"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:layout_marginTop="86dp" />
 
     <Button
@@ -33,7 +32,6 @@
         android:id="@+id/buttonAnswer2"
         android:elevation="0dp"
         android:layout_below="@+id/buttonAnswer1"
-        android:layout_alignParentStart="true"
         android:layout_marginTop="19dp" />
 
     <Button
@@ -42,6 +40,5 @@
         android:id="@+id/buttonAnswer3"
         android:elevation="0dp"
         android:layout_marginTop="19dp"
-        android:layout_below="@+id/buttonAnswer2"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/buttonAnswer2" />
 </RelativeLayout>
