--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -24,7 +24,8 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/buttonAnswer1"
-        android:elevation="0dp" />
+        android:elevation="0dp"
+        android:onClick="buttonAnswerOnClick"/>
 
     <Button
         android:layout_width="match_parent"
@@ -32,7 +33,8 @@
         android:id="@+id/buttonAnswer2"
         android:elevation="0dp"
         android:layout_below="@+id/buttonAnswer1"
-        android:layout_marginTop="19dp" />
+        android:layout_marginTop="19dp"
+        android:onClick="buttonAnswerOnClick"/>
 
     <Button
         android:layout_width="match_parent"
@@ -40,5 +42,6 @@
         android:id="@+id/buttonAnswer3"
         android:elevation="0dp"
         android:layout_marginTop="19dp"
-        android:layout_below="@+id/buttonAnswer2" />
+        android:layout_below="@+id/buttonAnswer2"
+        android:onClick="buttonAnswerOnClick"/>
 </RelativeLayout>
