Refactored some dumb code from Quiz activity, where I was not using the Presenter object to set the buttonss' texts :D. Added Quiz icon to the android manifest file, and Increased the question text view's size so it is more readable."

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -16,7 +16,12 @@
         android:text="Sup fool"
         android:gravity="center"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="86dp" />
+        android:layout_marginTop="86dp"
+        android:textSize="24sp"
+        android:typeface="serif"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal|bold"
+        android:textAlignment="center" />
 
     <Button
         android:layout_width="match_parent"
