--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -23,30 +23,48 @@
         android:textStyle="normal|bold"
         android:textAlignment="center" />
 
-    <Button
+    <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/buttonAnswer1"
-        android:elevation="0dp"
-        android:onClick="buttonAnswerOnClick"/>
+        android:id="@+id/radioButtonGroup"
+        android:layout_below="@+id/questionTextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="122dp"
+        android:fitsSystemWindows="false"
+        android:filterTouchesWhenObscured="false">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonAnswer2"
-        android:elevation="0dp"
-        android:layout_below="@+id/buttonAnswer1"
-        android:layout_marginTop="19dp"
-        android:onClick="buttonAnswerOnClick"/>
+        <RadioButton
+            android:text="RadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioButton1"
+            android:checked="false"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="left"
+            android:textSize="20sp"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonAnswer3"
-        android:elevation="0dp"
-        android:layout_marginTop="19dp"
-        android:layout_below="@+id/buttonAnswer2"
-        android:onClick="buttonAnswerOnClick"/>
+        <RadioButton
+            android:text="RadioButton"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioButton2"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="left" />
+
+        <RadioButton
+            android:text="RadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioButton3"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="left"
+            android:textSize="20sp"/>
+
+    </RadioGroup>
+
 </RelativeLayout>
