--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -10,28 +10,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.quiz.javi.quizapp.QuizActivity">
 
-    <TextView
-        android:id="@+id/questionTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="86dp"
-        android:textSize="24sp"
-        android:typeface="serif"
-        android:fontFamily="sans-serif"
-        android:textStyle="normal|bold"
-        android:textAlignment="center" />
-
     <RadioGroup
         android:id="@+id/radioButtonGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="20dp"
         android:filterTouchesWhenObscured="false"
         android:layout_below="@+id/questionTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+
+        <RadioButton
+            android:id="@+id/radioButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_gravity="center"
+            android:textSize="15sp"/>
 
         <RadioButton
             android:id="@+id/radioButton1"
@@ -39,35 +34,57 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:layout_margin="15dp"
-            android:layout_gravity="start"
-            android:textSize="20sp"/>
+            android:layout_gravity="center"
+            android:textSize="15sp" />
 
         <RadioButton
             android:id="@+id/radioButton2"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:layout_gravity="start" />
-
-        <RadioButton
-            android:id="@+id/radioButton3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_gravity="start"
-            android:textSize="20sp"/>
+            android:layout_gravity="center" />
 
     </RadioGroup>
 
+    <TextView
+        android:id="@+id/correctAnswersTextView"
+        android:text="@string/correct_answers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:typeface="serif" />
+
+    <TextView
+        android:id="@+id/numberOfAttemptsTextView"
+        android:text="@string/attempted_questions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/correctAnswersTextView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="14dp"
+        android:typeface="serif" />
+
     <Button
-        android:id="@+id/nextQuestionButton"
+        android:id="@+id/submitButton"
         android:text="@string/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="34dp" />
+        android:layout_below="@+id/radioButtonGroup"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="33dp" />
+
+    <TextView
+        android:id="@+id/questionTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="46dp"
+        android:textSize="24sp"
+        android:layout_below="@+id/numberOfAttemptsTextView"
+        android:layout_centerHorizontal="true"
+        android:typeface="serif" />
 
 </RelativeLayout>
