--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -48,6 +48,16 @@
     </RadioGroup>
 
     <TextView
+        android:id="@+id/questionNumberTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="46dp"
+        android:textSize="24sp"
+        android:layout_below="@+id/numberOfAttemptsTextView"
+        android:gravity="start"
+        android:typeface="serif" />
+
+    <TextView
         android:id="@+id/correctAnswersTextView"
         android:text="@string/correct_answers"
         android:layout_width="wrap_content"
