--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,93 +8,117 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.quiz.javi.quizapp.QuizActivity">
+    tools:context="com.quiz.javi.quizapp.QuizActivity"
+    android:orientation="vertical">
 
-    <RadioGroup
-        android:id="@+id/radioButtonGroup"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:filterTouchesWhenObscured="false"
-        android:layout_below="@+id/questionTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-        <RadioButton
-            android:id="@+id/radioButton3"
+        <TextView
+            android:id="@+id/correctAnswersTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_gravity="center"
-            android:textSize="15sp"/>
+            android:typeface="serif"
+            android:layout_alignParentRight="true"/>
 
-        <RadioButton
-            android:id="@+id/radioButton1"
+        <TextView
+            android:id="@+id/correctText"
+            android:text="@string/correct_answers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
-            android:layout_margin="15dp"
-            android:layout_gravity="center"
-            android:textSize="15sp" />
+            android:gravity="right"
+            android:typeface="serif"
+            android:layout_toLeftOf="@+id/correctAnswersTextView"
+            android:layout_marginRight="10dp" />
 
-        <RadioButton
-            android:id="@+id/radioButton2"
-            android:textSize="15sp"
+        <TextView
+            android:id="@+id/attempsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_gravity="center" />
+            android:typeface="serif"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/correctAnswersTextView"
+            android:layout_marginTop="10dp"/>
 
-    </RadioGroup>
+        <TextView
+            android:text="@string/attempted_questions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:typeface="serif"
+            android:layout_below="@+id/correctText"
+            android:layout_toLeftOf="@+id/attempsTextView"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:id="@+id/questionNumberTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="46dp"
-        android:textSize="24sp"
-        android:layout_below="@+id/numberOfAttemptsTextView"
-        android:gravity="start"
-        android:typeface="serif" />
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/correctAnswersTextView"
-        android:text="@string/correct_answers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:typeface="serif" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4">
 
-    <TextView
-        android:id="@+id/numberOfAttemptsTextView"
-        android:text="@string/attempted_questions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/correctAnswersTextView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="14dp"
-        android:typeface="serif" />
+        <TextView
+            android:id="@+id/questionNumberTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:gravity="start"
+            android:typeface="serif"
+            android:layout_alignParentLeft="true"/>
 
-    <Button
-        android:id="@+id/submitButton"
-        android:text="@string/submit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/radioButtonGroup"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="33dp" />
+        <TextView
+            android:id="@+id/questionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_centerHorizontal="true"
+            android:typeface="serif" />
 
-    <TextView
-        android:id="@+id/questionTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="46dp"
-        android:textSize="24sp"
-        android:layout_below="@+id/numberOfAttemptsTextView"
-        android:layout_centerHorizontal="true"
-        android:typeface="serif" />
+        <RadioGroup
+            android:id="@+id/radioButtonGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/questionTextView">
 
-</RelativeLayout>
+            <RadioButton
+                android:id="@+id/radioButton1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_gravity="center"
+                android:textSize="15sp"/>
+
+            <RadioButton
+                android:id="@+id/radioButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_gravity="center"
+                android:textSize="15sp" />
+
+            <RadioButton
+                android:id="@+id/radioButton3"
+                android:textSize="15sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_gravity="center" />
+
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/submitButton"
+            android:text="@string/submit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/radioButtonGroup"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp" />
+
+    </RelativeLayout>
+
+</LinearLayout>
