--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,77 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.quiz.javi.quizapp.QuizActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/appBackgroudColor">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/correctAnswersTextView"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:typeface="serif"
-            android:layout_alignParentRight="true"/>
+            android:scaleType="fitStart"
+            android:src="@drawable/quiz_app_logo"
+            android:paddingBottom="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="15dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
-            android:id="@+id/correctText"
+            android:id="@+id/correctAnswersTextView"
             android:text="@string/correct_answers"
+            android:textColor="@color/correctAnswerColor"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:typeface="serif"
-            android:layout_toLeftOf="@+id/correctAnswersTextView"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
             android:layout_marginRight="10dp" />
 
         <TextView
             android:id="@+id/attempsTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:typeface="serif"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/correctAnswersTextView"
-            android:layout_marginTop="10dp"/>
-
-        <TextView
             android:text="@string/attempted_questions"
+            android:textColor="@color/attemptsColor"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:typeface="serif"
-            android:layout_below="@+id/correctText"
-            android:layout_toLeftOf="@+id/attempsTextView"
+            android:layout_marginBottom="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_alignParentRight="true"
+            android:layout_above="@+id/correctAnswersTextView"/>
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4">
-
-        <TextView
-            android:id="@+id/questionNumberTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:gravity="start"
-            android:typeface="serif"
-            android:layout_alignParentLeft="true"/>
+        android:layout_weight="3">
 
         <TextView
             android:id="@+id/questionTextView"
+            android:textColor="@color/questionColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="25sp"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
             android:typeface="serif" />
 
         <RadioGroup
@@ -90,7 +82,10 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:layout_gravity="center"
-                android:textSize="15sp"/>
+                android:gravity="center"
+                android:textSize="20sp"
+                android:buttonTint="@color/submitColorPressed"
+                android:paddingLeft="10dp"/>
 
             <RadioButton
                 android:id="@+id/radioButton2"
@@ -98,27 +93,41 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:layout_gravity="center"
-                android:textSize="15sp" />
+                android:textSize="20sp"
+                android:buttonTintMode="src_in"
+                android:buttonTint="@color/submitColorPressed"
+                android:paddingLeft="10dp"/>
 
             <RadioButton
                 android:id="@+id/radioButton3"
-                android:textSize="15sp"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:buttonTint="@color/submitColorPressed"
+                android:paddingLeft="10dp"/>
 
         </RadioGroup>
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
         <Button
             android:id="@+id/submitButton"
+            android:background="@drawable/submit_button_drawable"
             android:text="@string/submit_button"
+            android:textSize="20sp"
+            android:textColor="@color/submitTextColor"
+            android:paddingRight="25dp"
+            android:paddingLeft="25dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/radioButtonGroup"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp" />
-
+            android:layout_centerInParent="true"/>
     </RelativeLayout>
 
 </LinearLayout>
