--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="correctAnswerColor">#00A550</color>
+    <color name="attemptsColor">#A7A9AB</color>
+    <color name="appBackgroudColor">#E6E7E8</color>
+    <color name="submitColorPressed">#4255A5</color>
+    <color name="submitColorNotPressed">#182B78</color>
+    <color name="submitTextColor">#FFFFFF</color>
+    <color name="questionColor">#080710</color>
 </resources>
