--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="score_text_view_margin">10dp</dimen>
+    <dimen name="question_text_view_margin">30dp</dimen>
+    <dimen name="answer_radio_button_margin">15dp</dimen>
+    <dimen name="answer_radio_button_padding">10dp</dimen>
 </resources>
