--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -51,28 +50,27 @@
         <TextView
             android:id="@+id/questionTextView"
             style="@style/QuestionTextView"
-            android:layout_centerHorizontal="true" />
+            android:text="what is your name"
+            android:layout_centerInParent="true"
+            android:layout_alignParentTop="true"/>
 
-        <RadioGroup
-            android:id="@+id/radioButtonGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/questionTextView">
+            <Button
+                android:id="@+id/buttonAnswer1"
+                style="@style/ButtonAnswerView"
+                android:layout_below="@+id/questionTextView"
+                android:layout_centerInParent="true" />
 
-            <RadioButton
-                android:id="@+id/radioButton1"
-                style="@style/RadioButtonBase" />
+            <Button
+                android:id="@+id/buttonAnswer2"
+                style="@style/ButtonAnswerView"
+                android:layout_below="@+id/buttonAnswer1"
+                android:layout_centerInParent="true" />
 
-            <RadioButton
-                android:id="@+id/radioButton2"
-                style="@style/RadioButtonBase" />
-
-            <RadioButton
-                android:id="@+id/radioButton3"
-                style="@style/RadioButtonBase" />
-
-        </RadioGroup>
+            <Button
+                android:id="@+id/buttonAnswer3"
+                style="@style/ButtonAnswerView"
+                android:layout_below="@+id/buttonAnswer2"
+                android:layout_centerInParent="true" />
 
     </RelativeLayout>
 
@@ -92,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"/>
+
     </RelativeLayout>
 
 </LinearLayout>
