Re-worked the logic of answering questions, both wrong and right. If the user selects the correct answer, the submit button is turned disabled with a green color and a correct text, and also the answer gets marked with green color. if The user selects the wrong question, all the mentioned before happens, but with an orange color. Also added a Next button, to jump to the next question by the user pressing on it. This allows for the behavior of displaying correct/incorrect, to be static and to let the user see what he has answered.

--- a/app/src/main/res/drawable/answer_button_background.xml
+++ b/app/src/main/res/drawable/answer_button_background.xml
@@ -9,4 +9,14 @@
         android:state_enabled="true"
         android:state_selected="true"
         android:drawable="@drawable/rounded_selected_answer_button"/>
+
+    <item
+        android:state_enabled="false"
+        android:state_selected="false"
+        android:drawable="@drawable/rounded_not_selected__answer_button"/>
+
+    <item
+        android:state_enabled="false"
+        android:state_selected="true"
+        android:drawable="@drawable/rounded_selected_answer_button"/>
 </selector>
