--- a/app/src/main/res/drawable/submit_button_background.xml
+++ b/app/src/main/res/drawable/submit_button_background.xml
@@ -2,11 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:state_pressed="true"
+        android:state_pressed="false"
         android:state_enabled="true"
         android:drawable="@color/submitColorNotPressed" />
 
     <item
         android:state_enabled="true"
+        android:state_pressed="true"
         android:drawable="@color/submitColorPressed" />
 </selector>
