--- a/app/src/main/res/drawable/next_button_background.xml
+++ b/app/src/main/res/drawable/next_button_background.xml
@@ -3,16 +3,31 @@
 
     <item
         android:state_pressed="false"
-        android:state_enabled="true"
-        android:drawable="@color/submitColorNotPressed" />
+        android:state_enabled="true">
+
+        <shape android:shape="rectangle">
+            <corners android:radius="15dp" />
+            <solid android:color="@color/submitColorNotPressed" />
+        </shape>
+    </item>
 
     <item
-        android:state_enabled="true"
         android:state_pressed="true"
-        android:drawable="@color/submitColorPressed" />
+        android:state_enabled="true">
+
+        <shape android:shape="rectangle">
+            <corners android:radius="15dp" />
+            <solid android:color="@color/submitColorPressed" />
+        </shape>
+    </item>
 
     <item
         android:state_pressed="false"
-        android:state_enabled="false"
-        android:drawable="@color/nextButtonColorDisabled" />
+        android:state_enabled="false">
+
+        <shape android:shape="rectangle">
+            <corners android:radius="15dp" />
+            <solid android:color="@color/nextButtonColorDisabled" />
+        </shape>
+    </item>
 </selector>
