--- a/app/src/main/res/drawable/submit_button_background.xml
+++ b/app/src/main/res/drawable/submit_button_background.xml
@@ -2,11 +2,19 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_pressed="false"
-        android:state_enabled="true"
-        android:drawable="@color/submitColorNotPressed" />
+        android:state_enabled="true" >
+        <shape android:shape="rectangle">
+            <corners android:radius="15dp" />
+            <solid android:color="@color/submitColorNotPressed" />
+        </shape>
+    </item>
 
     <item
-        android:state_enabled="true"
-        android:state_pressed="true"
-        android:drawable="@color/submitColorPressed" />
+        android:state_pressed="false"
+        android:state_enabled="true" >
+        <shape android:shape="rectangle">
+            <corners android:radius="15dp" />
+            <solid android:color="@color/submitColorPressed" />
+        </shape>
+    </item>
 </selector>
