--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,102 +10,76 @@
     android:background="@color/appBackgroudColor">
 
     <RelativeLayout
+        android:id="@+id/scoreLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="fitStart"
             android:src="@drawable/quiz_app_logo"
-            android:paddingBottom="15dp"
-            android:paddingRight="15dp"
             android:paddingTop="15dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:adjustViewBounds="true"
+            android:maxHeight="150dp"
+            android:maxWidth="150dp"
+            android:layout_alignParentLeft="true" />
+
+        <TextView
+            android:id="@+id/attempsTextView"
+            android:text="@string/attempted_questions"
+            style="@style/AttemptsTextView"
+            android:layout_marginTop="70dp"
+            android:layout_alignParentRight="true" />
 
         <TextView
             android:id="@+id/correctAnswersTextView"
             android:text="@string/correct_answers"
+            android:layout_below="@+id/attempsTextView"
             style="@style/CorrectTextView"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"             />
-
-        <TextView
-            android:id="@+id/attempsTextView"
-            android:layout_above="@+id/correctAnswersTextView"
-            android:text="@string/attempted_questions"
-            style="@style/AttemptsTextView"
+            android:layout_marginTop="10dp"
             android:layout_alignParentRight="true" />
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3">
+    <TextView
+        android:id="@+id/questionTextView"
+        style="@style/QuestionTextView"
+        android:layout_below="@+id/scoreLayout"
+        android:layout_centerInParent="true" />
 
-        <TextView
-            android:id="@+id/questionTextView"
-            style="@style/QuestionTextView"
-            android:layout_centerInParent="true"
-            android:layout_alignParentTop="true"/>
+    <Button
+        android:id="@+id/buttonAnswer1"
+        style="@style/ButtonAnswerView"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/questionTextView"/>
 
-            <Button
-                android:id="@+id/buttonAnswer1"
-                style="@style/ButtonAnswerView"
-                android:layout_below="@+id/questionTextView"
-                android:layout_centerInParent="true" />
+    <Button
+        android:id="@+id/buttonAnswer2"
+        style="@style/ButtonAnswerView"
+        android:layout_below="@+id/buttonAnswer1"
+        android:layout_centerInParent="true" />
 
-            <Button
-                android:id="@+id/buttonAnswer2"
-                style="@style/ButtonAnswerView"
-                android:layout_below="@+id/buttonAnswer1"
-                android:layout_centerInParent="true" />
+    <Button
+        android:id="@+id/buttonAnswer3"
+        style="@style/ButtonAnswerView"
+        android:layout_below="@+id/buttonAnswer2"
+        android:layout_centerInParent="true" />
 
-            <Button
-                android:id="@+id/buttonAnswer3"
-                style="@style/ButtonAnswerView"
-                android:layout_below="@+id/buttonAnswer2"
-                android:layout_centerInParent="true" />
+    <Button
+        android:id="@+id/submitButton"
+        android:background="@drawable/submit_button_background"
+        android:text="@string/submit_button"
+        android:layout_above="@+id/nextQuestionButton"
+        style="@style/ButtonSubmit"/>
 
-    </RelativeLayout>
+    <Button
+        android:id="@+id/nextQuestionButton"
+        android:background="@drawable/next_button_background"
+        android:text="@string/next_button"
+        android:layout_alignParentBottom="true"
+        android:enabled="false"
+        style="@style/ButtonSubmit"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <Button
-            android:id="@+id/submitButton"
-            android:background="@drawable/submit_button_background"
-            android:text="@string/submit_button"
-            android:textSize="20sp"
-            android:textColor="@color/submitTextColor"
-            android:textAllCaps="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="70dp"/>
-
-        <Button
-            android:id="@+id/nextQuestionButton"
-            android:layout_below="@+id/submitButton"
-            android:background="@drawable/next_button_background"
-            android:text="@string/next_button"
-            android:textSize="20sp"
-            android:textColor="@color/submitTextColor"
-            android:textAllCaps="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="70dp"
-            android:enabled="false"/>
-
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
