--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,7 @@
         <item name="android:textSize">25sp</item>
     </style>
 
-    <!-- Custom Buttons -->
+    <!-- Custom Answer Buttons -->
     <style name="ButtonBase">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -45,6 +45,17 @@
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginTop">@dimen/button_answer_view_margin</item>
         <item name="android:onClick">onButtonAnswerListener</item>
+    </style>
+
+    <style name="ButtonSubmit">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/submitTextColor</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:layout_marginBottom">20dp</item>
+
     </style>
 
 </resources>
