Adjusted quiz activity layout to use weights again, but now in a more efficient way. Prior to this design, I had built several nested layouts, where as now I only have one relative layout to represent the Score View.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="score_text_view_margin">10dp</dimen>
-    <dimen name="question_text_view_margin">25dp</dimen>
     <dimen name="button_answer_view_margin">20dp</dimen>
+    <dimen name="question_text_view_text_size">25sp</dimen>
 </resources>
