--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,36 +26,36 @@
         <item name="android:layout_marginRight">@dimen/score_text_view_margin</item>
     </style>
 
-    <style name="QuestionTextView" parent="TextViewBase">
+    <style name="QuestionTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
         <item name="android:textColor">@color/questionColor</item>
-        <item name="android:layout_marginTop">@dimen/question_text_view_margin</item>
-        <item name="android:layout_marginBottom">@dimen/question_text_view_margin</item>
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">@dimen/question_text_view_text_size</item>
+        <item name="android:gravity">center</item>
     </style>
 
     <!-- Custom Answer Buttons -->
     <style name="ButtonBase">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">1</item>
     </style>
 
     <style name="ButtonAnswerView" parent="ButtonBase">
         <item name="android:layout_gravity">center</item>
         <item name="android:background">@drawable/selector_answer_button_background</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_marginTop">@dimen/button_answer_view_margin</item>
         <item name="android:onClick">onButtonAnswerListener</item>
     </style>
 
     <style name="ButtonSubmit">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">0.5</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/submitTextColor</item>
         <item name="android:textAllCaps">true</item>
-        <item name="android:layout_centerInParent">true</item>
-        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
 
     </style>
-
 </resources>
