--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,10 +10,9 @@
     android:background="@color/appBackgroudColor">
 
     <RelativeLayout
-        android:id="@+id/scoreLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -30,56 +29,46 @@
             android:id="@+id/attempsTextView"
             android:text="@string/attempted_questions"
             style="@style/AttemptsTextView"
-            android:layout_marginTop="70dp"
-            android:layout_alignParentRight="true" />
+            android:layout_alignParentRight="true"
+            android:layout_above="@+id/correctAnswersTextView"/>
 
         <TextView
             android:id="@+id/correctAnswersTextView"
             android:text="@string/correct_answers"
-            android:layout_below="@+id/attempsTextView"
             style="@style/CorrectTextView"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentRight="true" />
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
 
     <TextView
         android:id="@+id/questionTextView"
-        style="@style/QuestionTextView"
-        android:layout_below="@+id/scoreLayout"
-        android:layout_centerInParent="true" />
+        android:layout_weight="0.5"
+        style="@style/QuestionTextView" />
 
     <Button
         android:id="@+id/buttonAnswer1"
-        style="@style/ButtonAnswerView"
-        android:layout_centerInParent="true"
-        android:layout_below="@+id/questionTextView"/>
+        style="@style/ButtonAnswerView" />
 
     <Button
         android:id="@+id/buttonAnswer2"
-        style="@style/ButtonAnswerView"
-        android:layout_below="@+id/buttonAnswer1"
-        android:layout_centerInParent="true" />
+        style="@style/ButtonAnswerView" />
 
     <Button
         android:id="@+id/buttonAnswer3"
-        style="@style/ButtonAnswerView"
-        android:layout_below="@+id/buttonAnswer2"
-        android:layout_centerInParent="true" />
+        style="@style/ButtonAnswerView" />
 
     <Button
         android:id="@+id/submitButton"
         android:background="@drawable/submit_button_background"
         android:text="@string/submit_button"
-        android:layout_above="@+id/nextQuestionButton"
         style="@style/ButtonSubmit"/>
 
     <Button
         android:id="@+id/nextQuestionButton"
         android:background="@drawable/next_button_background"
         android:text="@string/next_button"
-        android:layout_alignParentBottom="true"
         android:enabled="false"
         style="@style/ButtonSubmit"/>
 
-</RelativeLayout>
+</LinearLayout>
